[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/credits.svg" type="Texture" id=1]
[ext_resource path="res://ui/SimpleButton.gd" type="Script" id=2]
[ext_resource path="res://resource/default_theme.tres" type="Theme" id=3]

[node name="SimpleButton" type="TextureButton"]
modulate = Color( 0.403922, 0.537255, 0.513726, 1 )
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="BlinkTween" type="Tween" parent="."]

[connection signal="button_down" from="." to="." method="_on_SimpleButton_button_down"]
[connection signal="button_up" from="." to="." method="_on_SimpleButton_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_SimpleButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SimpleButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_SimpleButton_pressed"]
